syntax = "proto3";
package proto;

service Movie {
    rpc Create (CreateRequest) returns (CreateResponse) {
    }

    rpc Read (ReadRequest) returns (ReadResponse) {
    }

    rpc ReadAll (ReadAllRequest) returns (ReadAllResponse) {
    }

    rpc Update (UpdateRequest) returns (UpdateResponse) {
    }

    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
}

message MovieData {
    string title = 1;
}

message CreateRequest {
    MovieData data = 1;
}

message CreateResponse {
    int64 createdId = 2;
}

message ReadRequest {
    int64 id = 1;
}

message ReadResponse {
    int64 id = 2;
    MovieData data = 3;
}

message ReadAllRequest {
}

message ReadAllResponse {
    repeated int64 ids = 2;
    repeated MovieData dates = 3;
}

message UpdateRequest {
    int64 id = 1;
    MovieData data = 2;
}

message UpdateResponse {
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
}
